--- a/OrdenacaoDojo.ipynb
+++ b/OrdenacaoDojo.ipynb
@@ -28,10 +28,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "hR_1f-WQJ4Qu",
-        "outputId": "5896ab9d-efc1-4213-cac2-09a682a194b0",
+        "outputId": "4b94dec7-b37a-4e78-d6d2-3ae14558958f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 87
         }
       },
       "source": [
@@ -53,7 +53,7 @@
         "Diego\t            14\n",
         "'''"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -68,7 +68,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 1
         }
       ]
     },
@@ -76,10 +76,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "7_p6L9VqKFny",
-        "outputId": "a6e9da99-128d-4b1b-8b88-7e66da3dcf2b",
+        "outputId": "f49416d9-284b-473b-8545-0bbc984eb5ac",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
+          "height": 55
         }
       },
       "source": [
@@ -94,7 +94,7 @@
         "print(vetor)\n",
         "    "
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +118,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "NpgcfdlaWBXn",
-        "outputId": "a3744424-d0b4-4fdd-a303-19134f5f9942",
+        "outputId": "5ae8b36d-3a8e-40c8-b2d6-99f0a066e021",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 55
@@ -174,7 +174,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,14 +186,69 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q6HsHkoZgaB2"
+      },
+      "source": [
+        "3. Considerando a estrutura de dados a seguir, ordene-a por meio do método da seleção direta - SeletionSort. Mostre o conteúdo da estrutura antes e depois da ordenação\n",
+        "\n",
+        "CB   DB   AA BA   CA   DA   BB   AB"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "KkvB2M9Of7qr"
+        "id": "SeEKPX7UgbUS",
+        "outputId": "f2b8406a-3fc7-458b-fa94-044a2a2c3c94",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 104
+        }
+      },
+      "source": [
+        "lista =[\"CB\", \"DB\", \"AA\", \"BA\", \"CA\", \"DA\", \"BB\", \"AB\"]\n",
+        "\n",
+        "print(\"Lista Desordenada\\n\")\n",
+        "print(lista)\n",
+        "\n",
+        "def selection(lista):\n",
+        "    for i in range(0, len(lista)):\n",
+        "        min_i = i\n",
+        "        for direita in range(i + 1, len(lista)):\n",
+        "            if lista[direita] < lista[min_i]:\n",
+        "                min_i = direita\n",
+        "        lista[i], lista[min_i] = lista[min_i], lista[i]\n",
+        "    return lista\n",
+        "\n",
+        "print(\"Lista Ordenada\")\n",
+        "ordered = selection(lista)\n",
+        "print(ordered)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Lista Desordenada\n",
+            "\n",
+            "['CB', 'DB', 'AA', 'BA', 'CA', 'DA', 'BB', 'AB']\n",
+            "Lista Ordenada\n",
+            "['AA', 'AB', 'BA', 'BB', 'CA', 'CB', 'DA', 'DB']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sB1SOIRAnSiK"
       },
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     }
   ]
